--- a/Knowledge/Open_Code/index.html
+++ b/Knowledge/Open_Code/index.html
@@ -6,8 +6,8 @@
    <link rel="stylesheet" href="/libs/katex/katex.min.css">
      
   
-  <link rel="stylesheet" href="/orbook2/css/jtd.css">
-<link rel="icon" href="/orbook2/assets/favicon.ico">
+  <link rel="stylesheet" href="/css/jtd.css">
+<link rel="icon" href="/assets/favicon.ico">
 
 <style>
   /* #148 wrap long header */
