fix up links and references

--- a/__site/Infrastructure/Open_Licensing/index.html
+++ b/__site/Infrastructure/Open_Licensing/index.html
@@ -101,14 +101,22 @@
 <div class="note"><div class="title">⚠ Practice Example</div>
 <div class="content">The Brookes IP policy is linked below, and, where needed, members of the Knowledge Exchange and Impact team in RIE can assist with IP questions: Email rieenquiries@brookes.ac.uk .  For help with open licences in relation to Open Access publishing, you can check out the University website, and the Open Access team at the Library is also there to help you: email them at <code>openaccess@brookes.ac.uk</code>.</div></div>
 <p>As indicated above, there is no one-size-fits-all licence.  Even though CC By is widely used in Open Access publishing, Punctum Books for example, have made an argument &#40;linked below&#41; for using the more restrictive CC By-NC licence on their humanities monograph publications.  This licence permits derivatives, but forbids commercial use of these derivatives. For those who want to learn more about these topics, here are some books on open licences and adjacent topics &#40;which are themselves available as open access&#41;.</p>
-<p> Suber, Peter, <em>Open Access</em> &#40;Cambridge, Mass., MIT Press, 2012&#41;</p>
-<p>Montgomery, Lucy, Hartley, John, et al., <em>Open Knowledge Institutions: Reinventing Universities</em> &#40;Cambridge, Mass. MIT Press, 2021&#41;</p>
-<p><a href="https://punctumbooks.pubpub.org/pub/creative-commons-by-nc-licensing-open-access/release/9">https://punctumbooks.pubpub.org/pub/creative-commons-by-nc-licensing-open-access/release/9</a> </p>
-<p><a href="https://www.gov.uk/guidance/ownership-of-copyright-works#works-created-for-an-employer">https://www.gov.uk/guidance/ownership-of-copyright-works#works-created-for-an-employer</a> </p>
-<p><a href="https://www.brookes.ac.uk/library/resources-and-services/for-researchers/open-access">https://www.brookes.ac.uk/library/resources-and-services/for-researchers/open-access</a> </p>
-<p><a href="https://drive.google.com/file/d/1M6BEvVhaMxGqktrQNOGsTDhztTcioFwb/view">https://drive.google.com/file/d/1M6BEvVhaMxGqktrQNOGsTDhztTcioFwb/view</a> &#40;IP Policy&#41;</p>
+
+<h2 id="links"><a href="#links" class="header-anchor">Links</a></h2>
+<ul>
+<li><p><a href="https://chooser-beta.creativecommons.org/">Creative Commons License chooser</a></p>
+</li>
+<li><p><a href="https://www.gov.uk/guidance/ownership-of-copyright-works#works-created-for-an-employer">Intellectual Property Office: Ownership of copyright works</a></p>
+</li>
+<li><p><a href="https://drive.google.com/file/d/1M6BEvVhaMxGqktrQNOGsTDhztTcioFwb/view">Oxford Brookes University: Intellectual Property Policy</a></p>
+</li>
+</ul>
+<h2 id="references"><a href="#references" class="header-anchor">References</a></h2>
+<p>Suber, Peter &#40;2012&#41; Open Access &#40;Cambridge, Mass.: MIT Press, &#41;</p>
+<p>Montgomery, Lucy, Hartley, John, et al. &#40;2021&#41;. Open Knowledge Institutions: Reinventing Universities &#40;Cambridge, Mass: MIT Press&#41;</p>
+<p>van Gerven Oei, V. W. J. &#40;2020&#41;. Why CC BY-NC Licenses Are Still Necessary in Open Access Book Publishing. Punctum Books. Retrieved from <a href="https://punctumbooks.pubpub.org/pub/creative-commons-by-nc-licensing-open-access">https://punctumbooks.pubpub.org/pub/creative-commons-by-nc-licensing-open-access</a></p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: January 14, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
