--- a/Infrastructure/Repositories_and_Persistent_Research_Identifiers/index.html
+++ b/Infrastructure/Repositories_and_Persistent_Research_Identifiers/index.html
@@ -18,7 +18,7 @@
   }
 </style>
 
-   <title><strong>Repositories and Persistent Research Identifiers</strong></title>  
+   <title>Repositories and Persistent Research Identifiers</title>  
 </head>
 <body>                      <!-- closed in foot.html -->
 <div class="page-wrap">   <!-- closed in foot.html -->
@@ -77,7 +77,7 @@
 
 
 <!-- Content appended here (in class franklin-content) -->
-<div class="franklin-content"><h1 id="repositories_and_persistent_research_identifiers"><a href="#repositories_and_persistent_research_identifiers" class="header-anchor"><strong>Repositories and Persistent Research Identifiers</strong></a></h1>
+<div class="franklin-content"><h1 id="repositories_and_persistent_research_identifiers"><a href="#repositories_and_persistent_research_identifiers" class="header-anchor">Repositories and Persistent Research Identifiers</a></h1>
 <p> Hello, and welcome to this short talk which will look at the related topics of Repositories and Persistent Research Identifiers.  We begin by saying what we mean by a repository, and how repositories relate to open research.  We’ll give some examples of the alternative kinds of repositories you might use, depending on the needs of your project. We will then move on to describe Persistent Research Identifiers — which are codes that make it easy to find and share materials stored in a repository.  We’ll conclude with a pointer to guidance on how to prepare information for before deposit, and some tips on working with persistent identifiers.</p>
 
 <h3 id="what_is_a_repository"><a href="#what_is_a_repository" class="header-anchor"><strong>What is a repository?</strong></a></h3>
@@ -105,20 +105,23 @@
 <h3 id="working_with_dois_and_persistent_identifiers"><a href="#working_with_dois_and_persistent_identifiers" class="header-anchor"><strong>Working with DOIs and persistent identifiers</strong></a></h3>
 <p>As mentioned above, the website <a href="https://doi.org">doi.org</a> is useful for looking up a paper from its DOIs.  Additional tools like <a href="https://www.doi2bib.org/">doi2bib.org</a> can turn the DOI into a usable citation.  Although it’s a somewhat self-explanatory example, <a href="https://shortdoi.org/">shortdoi.org</a> can be used to shorten DOIs, which could be useful if you’re ever scrambling for column space.  If you have set up a working repository on Github, it may be useful to know that you can <a href="https://docs.github.com/en/repositories/archiving-a-github-repository/referencing-and-citing-content">use Zenodo to obtain a DOI for the repository</a>, making it easier to cite work in progress there.  Other identifiers like ORCiDs and RORs may be helpful when submitting material to journals, repositories, or other platforms &#40;for example, if you upload to Octopus, you can flag the organisation that funded your work using their ROR&#41;.</p>
 
+<h2 id="links"><a href="#links" class="header-anchor">Links</a></h2>
 <ul>
-<li><p><a href="https://www.brookes.ac.uk/library/resources-and-services/forresearchers/publishing-research-data#metadata">https://www.brookes.ac.uk/library/resources-and-services/forresearchers/publishing-research-data#metadata</a>  </p>
+<li><p><a href="https://citation.doi.org/">DOI Citation Formatter</a></p>
 </li>
-<li><p><a href="https://www.sciencedirect.com/science/article/pii/S0164121221002144">https://www.sciencedirect.com/science/article/pii/S0164121221002144</a>  </p>
+<li><p><a href="https://www.doi2bib.org/">Doi2Bib &#40;formatter for BibTeX&#41;</a></p>
 </li>
-<li><p><a href="https://en.wikipedia.org/wiki/List_of_preprint_repositories">https://en.wikipedia.org/wiki/List&#95;of&#95;preprint&#95;repositories</a>  </p>
+<li><p><a href="https://en.wikipedia.org/w/index.php?title&#61;List_of_preprint_repositories&amp;oldid&#61;1273297683">List of preprint repositories on Wikipedia</a></p>
 </li>
-<li><p><a href="https://www.wikidata.org/wiki/Wikidata:SPARQL_query_service/A_gentle_introduction_to_the_Wikidata_Query_Service">https://www.wikidata.org/wiki/Wikidata:SPARQL&#95;query&#95;service/A&#95;gentle&#95;introduction&#95;to&#95;the&#95;Wikidata&#95;Query&#95;Service</a>  </p>
+<li><p><a href="https://docs.github.com/en/repositories/archiving-a-github-repository/referencing-and-citing-content">Github Docs: Issuing a persistent identifier for your &#91;Github&#93; repository with Zenodo</a></p>
 </li>
-<li><p><a href="https://citation.crosscite.org/">https://citation.crosscite.org/</a></p>
+<li><p><a href="https://www.wikidata.org/wiki/Wikidata:SPARQL_query_service/A_gentle_introduction_to_the_Wikidata_Query_Service">A gentle introduction to the Wikidata Query Service</a></p>
 </li>
 </ul>
+<h2 id="reference"><a href="#reference" class="header-anchor">Reference</a></h2>
+<p>Wattanakriengkrai, S., Chinthanet, B., Hata, H., Kula, R. G., Treude, C., Guo, J., &amp; Matsumoto, K. &#40;2022&#41;. GitHub repositories with links to academic papers: Public access, traceability, and evolution. Journal of Systems and Software, 183, 111117.</p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: January 14, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
