--- a/Methods/Participatory_Research/index.html
+++ b/Methods/Participatory_Research/index.html
@@ -99,19 +99,21 @@
 <p>This process can end up opening up possible futures that the researcher wouldn’t have anticipated on their own; this illustrates why opening up the research process can constitute such a vital aspect of “open research”.</p>
 <p> <div class="note"><div class="title">⚠ Practice Example</div>
 <div class="content">There are several well-developed strands of participatory research at Brookes, for example a recent report led by Dr Sarah Quinton includes good practice guidelines on participatory research with older people. While that might not be your area of focus, the Public Engagement team offers sessions that can help you develop your own approach to engaging the public in your research &#40;<code>publicengagement@brookes.ac.uk</code>&#41;, with a particular eye to impact.</div></div></p>
-<p> Stilgoe, J., Owen, R., &amp; Macnaghten, P. &#40;2013&#41;. Developing a framework for responsible innovation. In Research Policy &#40;Vol. 42, Issue 9, pp. 1568–1580&#41;. Elsevier BV. https://doi.org/10.1016/j.respol.2013.05.008 </p>
-<p>Nielsen, M. &#40;2020&#41;. Reinventing discovery: the new era of networked science. Princeton University Press.</p>
-<p>Featherstone, L. &#40;2018&#41;. <em>Divining desire: focus groups and the culture of consultation</em>. OR books.</p>
-<p>Benkler, Y. &#40;2002&#41;. Coase&#39;s penguin, or, Linux and “The nature of the Firm&quot;. <em>Yale Law Journal</em>, 369-446.</p>
-<p>Gowers, T., &amp; Nielsen, M. &#40;2009&#41;. Massively collaborative mathematics. In Nature &#40;Vol. 461, Issue 7266, pp. 879–881&#41;. Springer Science and Business Media LLC. <a href="https://doi.org/10.1038/461879a">https://doi.org/10.1038/461879a</a></p>
-<p>Lang, I., King, A., Jenkins, G., Boddy, K., Khan, Z., &amp; Liabo, K. &#40;2022&#41;. How common is patient and public involvement &#40;PPI&#41;? Cross-sectional analysis of frequency of PPI reporting in health research papers and associations with methods, funding sources and other factors. In BMJ Open &#40;Vol. 12, Issue 5, p. e063356&#41;. BMJ. https://doi.org/10.1136/bmjopen-2022-063356</p>
-<p>Ten Holter, C. &#40;2022&#41;. Participatory design: lessons and directions for responsible research and innovation. In Journal of Responsible Innovation &#40;Vol. 9, Issue 2, pp. 275–290&#41;. Informa UK Limited. https://doi.org/10.1080/23299460.2022.2041801 </p>
-<p><a href="https://www.brookes.ac.uk/getmedia/06ad3597-b6c7-4be5-9b3f-18d71fa343d1/older-people-and-participatory-research-2022.pdf">https://www.brookes.ac.uk/getmedia/06ad3597-b6c7-4be5-9b3f-18d71fa343d1/older-people-and-participatory-research-2022.pdf</a></p>
-<p><a href="https://www.ukri.org/who-we-are/epsrc/our-policies-and-standards/framework-for-responsible-innovation/">https://www.ukri.org/who-we-are/epsrc/our-policies-and-standards/framework-for-responsible-innovation/</a></p>
-<p><a href="https://www.youtube.com/watch?v&#61;7r9IYl4CtKI">https://www.youtube.com/watch?v&#61;7r9IYl4CtKI</a></p>
-<p><a href="https://www.brookes.ac.uk/sites/research-support/pen/training-and-support">https://www.brookes.ac.uk/sites/research-support/pen/training-and-support</a></p>
+
+<h2 id="links"><a href="#links" class="header-anchor">Links</a></h2>
+<ul>
+<li><p><a href="https://www.ukri.org/who-we-are/epsrc/our-policies-and-standards/framework-for-responsible-innovation/">UK Research and Innovation: Framework for responsible research and innovation</a></p>
+</li>
+<li><p><a href="https://www.brookes.ac.uk/sites/research-support/pen/how-to-engage">Oxford Brookes University Research Support: How to engage</a></p>
+</li>
+</ul>
+<h2 id="references"><a href="#references" class="header-anchor">References</a></h2>
+<p>Stilgoe, J., Owen, R., &amp; Macnaghten, P. &#40;2013&#41;. Developing a framework for responsible innovation. In Research Policy &#40;Vol. 42, Issue 9, pp. 1568–1580&#41;. Elsevier BV. <a href="https://doi.org/10.1016/j.respol.2013.05.008">https://doi.org/10.1016/j.respol.2013.05.008</a></p>
+<p>Lang, I., King, A., Jenkins, G., Boddy, K., Khan, Z., &amp; Liabo, K. &#40;2022&#41;. How common is patient and public involvement &#40;PPI&#41;? Cross-sectional analysis of frequency of PPI reporting in health research papers and associations with methods, funding sources and other factors. In BMJ Open &#40;Vol. 12, Issue 5, p. e063356&#41;. BMJ. <a href="https://doi.org/10.1136/bmjopen-2022-063356">https://doi.org/10.1136/bmjopen-2022-063356</a></p>
+<p>Ten Holter, C. &#40;2022&#41;. Participatory design: lessons and directions for responsible research and innovation. In Journal of Responsible Innovation &#40;Vol. 9, Issue 2, pp. 275–290&#41;. Informa UK Limited. <a href="https://doi.org/10.1080/23299460.2022.2041801">https://doi.org/10.1080/23299460.2022.2041801</a></p>
+<p>Sarah Quinton et al. &#40;2022&#41;. Older People and Participatory Research: Creativity and Digital Technologies as Vehicles for Enhancing Wellbeing. <a href="https://www.brookes.ac.uk/getmedia/06ad3597-b6c7-4be5-9b3f-18d71fa343d1/older-people-and-participatory-research-2022.pdf">https://www.brookes.ac.uk/getmedia/06ad3597-b6c7-4be5-9b3f-18d71fa343d1/older-people-and-participatory-research-2022.pdf</a></p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: January 14, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
