clean up references and footers

--- a/__site/Communities/Open_Communities/index.html
+++ b/__site/Communities/Open_Communities/index.html
@@ -136,13 +136,15 @@
 <p>A. T. Ariyaratne. Organization of rural communities for group effort and self-help. In Food Crisis Workshop, Los Baños, Laguna &#40;Philippines&#41;, 7-9 Feb 1977, pages 23–24, 1977. Digitized copy archived at <a href="https://web.archive.org/web/20150308150744/http://www.sarvodaya.org/about/philosophy/collected-works-vol-1/rural-self-help">https://web.archive.org/web/20150308150744/http://www.sarvodaya.org/about/philosophy/collected-works-vol-1/rural-self-help</a></p>
 <p>David A. Whetton and Kim S. Cameron. &#40;2011&#41;. “Conducting Meetings” &#40;Supplement C&#41; in: Developing management skills. &#40;pp. 652-659&#41;. Pearson Education. 8th Ed.</p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
   </body>
