--- a/__site/Communities/Research_Diversity/index.html
+++ b/__site/Communities/Research_Diversity/index.html
@@ -118,15 +118,17 @@
 <p>Y. Yang, T.Y. Tian, T.K. Woodruff, B.F. Jones, &amp; B. Uzzi. &#40;2022&#41;. Gender-diverse teams produce more novel and higher-impact scientific ideas, Proc. Natl. Acad. Sci. U.S.A. 119 &#40;36&#41; e2200841119, <a href="https://doi.org/10.1073/pnas.2200841119">https://doi.org/10.1073/pnas.2200841119</a></p>
 <p>Ginther, D. K., Basner, J., Jensen, U., Schnell, J., Kington, R., &amp; Schaffer, W. T. &#40;2018&#41;. Publications as predictors of racial and ethnic differences in NIH research awards. In L. G. Koniaris &#40;Ed.&#41;, PLOS ONE &#40;Vol. 13, Issue 11, p. e0205929&#41;. Public Library of Science &#40;PLoS&#41;. <a href="https://doi.org/10.1371/journal.pone.0205929">https://doi.org/10.1371/journal.pone.0205929</a></p>
 <p>Huang, C.-K., Neylon, C., Montgomery, L., Hosking, R., Diprose, J. P., Handcock, R. N., &amp; Wilson, K. &#40;2024&#41;. Open access research outputs receive more diverse citations. In Scientometrics &#40;Vol. 129, Issue 2, pp. 825–845&#41;. Springer Science and Business Media LLC. <a href="https://doi.org/10.1007/s11192-023-04894-0">https://doi.org/10.1007/s11192-023-04894-0</a></p>
-<p>Anthony J. Olejniczak, Molly J. Wilson. &#40;2020&#41;. Who’s writing open access &#40;OA&#41; articles? Characteristics of OA authors at Ph.D.-granting institutions in the United States. Quantitative Science Studies. 1 &#40;4&#41;: 1429–1450. doi: <a href="https://doi.org/10.1162/qss_a_00091">https://doi.org/10.1162/qss<em>a</em>00091</a></p>
+<p>Anthony J. Olejniczak, Molly J. Wilson. &#40;2020&#41;. Who’s writing open access &#40;OA&#41; articles? Characteristics of OA authors at Ph.D.-granting institutions in the United States. Quantitative Science Studies. 1 &#40;4&#41;: 1429–1450. doi: <a href="https://doi.org/10.1162/qss_a_00091">https://doi.org/10.1162/qss&#95;a&#95;00091</a></p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
   </body>
