--- a/__site/Methods/Citizen_Science_and_Crowdsourcing/index.html
+++ b/__site/Methods/Citizen_Science_and_Crowdsourcing/index.html
@@ -100,7 +100,9 @@
 <h3 id="risks_and_risk_management_strategies"><a href="#risks_and_risk_management_strategies" class="header-anchor"><strong>Risks and risk management strategies</strong></a></h3>
 <p>Along with the various benefits touched on earlier, crowdsourcing and citizen science methods come with some risks and limitations.  You may decide that the research you’re working with can’t be dealt with ethically or practically by relying on low-paid or unpaid contributors; for example, confidentiality concerns might make these strategies inappropriate for some research settings.  In settings where crowdsourcing or citizen science is suitable, from a pragmatic standpoint, the project will need to be made robust against low-quality contributions, reporting inaccuracies and participant drop-out.  Some of these risks can be sorted out with a good research design.  For example, one typical strategy that can help ensure data quality in crowdsourcing projects is to test out would-be participants on a set of screening questions, in order to assess their suitability as contributors, before they start contributing research data. It may also be necessary to spot-check individual responses, and to screen the contributions for statistical outliers or other indications of less-useful contributions &#40;for example, if your participants have disengaged and started to mindlessly click through the questions&#41;. </p>
 <h3 id="citizen_science_as_a_route_to_engagement"><a href="#citizen_science_as_a_route_to_engagement" class="header-anchor"><strong>Citizen science as a route to engagement</strong></a></h3>
-<p>On that note, if it employs a solid design, citizen science can work well as a route to “public engagement”; often more so than crowdsourcing.  As mentioned earlier, you may choose to include both technical training and more wide reaching activities to help participants develop scientific literacy. If you’re thinking about how to incorporate citizen science into your research, or wondering whether another form of engagement would be better for the aims you have in mind, it is worth having a look at the relevant research support pages, and getting in touch with the Public Engagement team &#40;<code>publicengagement@brookes.ac.uk</code>&#41;.</p>
+<p>On that note, if it employs a solid design, citizen science can work well as a route to “public engagement”; often more so than crowdsourcing.  As mentioned earlier, you may choose to include both technical training and more wide reaching activities to help participants develop scientific literacy.</p>
+<div class="note"><div class="title">⚠ Practice Example</div>
+<div class="content">If you’re thinking about how to incorporate citizen science into your research, or wondering whether another form of engagement would be better for the aims you have in mind, it is worth having a look at the relevant <a href="https://www.brookes.ac.uk/engage-and-innovate/public-community-engagement">research support pages</a>, and getting in touch with the Public Engagement team &#40;<code>publicengagement@brookes.ac.uk</code>&#41;.</div></div>
 
 <h2 id="links"><a href="#links" class="header-anchor">Links</a></h2>
 <ul>
@@ -114,13 +116,15 @@
 <p>Bassi, H., Misener, L., &amp; Johnson, A. M. &#40;2020&#41;. Crowdsourcing for Research: Perspectives From a Delphi Panel. In SAGE Open &#40;Vol. 10, Issue 4, p. 215824402098075&#41;. SAGE Publications. <a href="https://doi.org/10.1177/2158244020980751">https://doi.org/10.1177/2158244020980751</a></p>
 <p>Moss, A. J., Rosenzweig, C., Robinson, J., Jaffe, S. N., &amp; Litman, L. &#40;2021&#41;. Is it Ethical to Use Mechanical Turk for Behavioral Research? Relevant Data from a Representative Survey of MTurk Participants and Wages. Center for Open Science. <a href="https://osf.io/jbc9d_v1">https://osf.io/jbc9d_v1</a></p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
   </body>
