--- a/__site/Methods/Open_Protocols/index.html
+++ b/__site/Methods/Open_Protocols/index.html
@@ -106,13 +106,15 @@
 <p>Moreau, D., &amp; Wiebels, K. &#40;2023&#41;. Ten simple rules for designing and conducting undergraduate replication projects. In R. Schwartz &#40;Ed.&#41;, PLOS Computational Biology &#40;Vol. 19, Issue 3, p. e1010957&#41;. Public Library of Science &#40;PLoS&#41;. <a href="https://doi.org/10.1371/journal.pcbi.1010957">https://doi.org/10.1371/journal.pcbi.1010957</a></p>
 <p>Henderson, E. L., &amp; Chambers, C. D. &#40;2022&#41;. Ten simple rules for writing a Registered Report. In PLOS Computational Biology &#40;Vol. 18, Issue 10, p. e1010571&#41;. Public Library of Science &#40;PLoS&#41;. <a href="https://doi.org/10.1371/journal.pcbi.1010571">https://doi.org/10.1371/journal.pcbi.1010571</a></p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
   </body>
