--- a/__site/Methods/Open_peer_review/index.html
+++ b/__site/Methods/Open_peer_review/index.html
@@ -116,16 +116,18 @@
 </li>
 </ul>
 <h2 id="references"><a href="#references" class="header-anchor">References</a></h2>
-<p>Pros and cons of open peer review. &#40;1999&#41;. In Nature Neuroscience &#40;Vol. 2, Issue 3, pp. 197–198&#41;. Springer Science and Business Media LLC. https://doi.org/10.1038/6295 </p>
-<p>Smith, R. &#40;1999&#41;. Opening up BMJ peer review. In BMJ &#40;Vol. 318, Issue 7175, pp. 4–5&#41;. BMJ. https://doi.org/10.1136/bmj.318.7175.4  </p>
+<p>Pros and cons of open peer review. &#40;1999&#41;. In Nature Neuroscience &#40;Vol. 2, Issue 3, pp. 197–198&#41;. Springer Science and Business Media LLC. <a href="https://doi.org/10.1038/6295">https://doi.org/10.1038/6295</a></p>
+<p>Smith, R. &#40;1999&#41;. Opening up BMJ peer review. In BMJ &#40;Vol. 318, Issue 7175, pp. 4–5&#41;. BMJ. <a href="https://doi.org/10.1136/bmj.318.7175.4">https://doi.org/10.1136/bmj.318.7175.4</a></p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
   </body>
