--- a/__site/Infrastructure/Interoperability/index.html
+++ b/__site/Infrastructure/Interoperability/index.html
@@ -110,13 +110,15 @@
 <p>Merton, R. &#40;1936&#41;. The Unanticipated Consequences of Purposive Social Action, 1AM. SOC. REV, 894, 903-04. <a href="https://www.jstor.org/stable/2084615">https://www.jstor.org/stable/2084615</a>  </p>
 <p>Abigail Emery, Dr Laura de Molière, Dr Paulina Lang, Dr Moira Nicolson, and Eleanor Prince. &#40;2021&#41; IN CASE: A behavioural approach to anticipating unintended consequences. Government Communication Service. <a href="https://gcs.civilservice.gov.uk/publications/in-case-a-behavioural-approach-to-anticipating-unintended-consequences/">https://gcs.civilservice.gov.uk/publications/in-case-a-behavioural-approach-to-anticipating-unintended-consequences/</a></p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
   </body>
