--- a/__site/Infrastructure/Open_Platforms/index.html
+++ b/__site/Infrastructure/Open_Platforms/index.html
@@ -118,13 +118,15 @@
 <p>Tomlinson, B., et al. 2012. Massively distributed authorship of academic papers. CHI’12 Extended Abstracts on Human Factors in Computing Systems, ACM, 11–20. <a href="https://dl.acm.org/doi/10.1145/2212776.2212779">https://dl.acm.org/doi/10.1145/2212776.2212779</a></p>
 <p>Thelwall, M., Kousha, K., Abdoli, M., Stuart, E., Makita, M., Wilson, P., &amp; Levitt, J. &#40;2023&#41;. Why are coauthored academic articles more cited: Higher quality or larger audience?. Journal of the Association for Information Science and Technology, 74&#40;7&#41;, 791-810.</p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
   </body>
