--- a/__site/Knowledge/Open_Data/index.html
+++ b/__site/Knowledge/Open_Data/index.html
@@ -79,16 +79,16 @@
 <!-- Content appended here (in class franklin-content) -->
 <div class="franklin-content"><h1 id="open_data"><a href="#open_data" class="header-anchor">Open Data</a></h1>
 <p> Welcome to this talk on open data.  The talk covers the benefits of open data, the circumstances under which open data isn’t appropriate, and the relationship between open data and “web scraping”.  We will touch on both the history of open data, and current work that is helping to build the future of open data.  The talk concludes with some practical pointers about how to get your hands on relevant open data for use in secondary analysis, how to prepare new data sets for deposit, and some reflections about what kinds of re-use different data formats support.</p>
-<p> ‘Open data’ describes data sets which are freely available to anyone to use and republish as they wish, without restrictions.  Typically this implies that the data that is available over a computer connection — though you could potentially find legally-unencumbered data in out-of-copyright books and other historical records.  Open Data is one of the key tenets of Open Research, though, as of now, it has not had uniform uptake: <a href="https://www.nature.com/articles/s41597-021-00981-0">depending on the discipline</a>, the rate at which data is available to support publications can range from 9&#37; to 76&#37;.  Furthermore, in comparison with the development of open licences for publications, the development of legal mechanisms for sharing data has been slower, partly because the rights that are attached to research data are typically not a simple ‘copyright’.  Funders also have differing requirements.  Agencies that disperse <strong>public</strong> funds are more likely to require research data produced as part of a funded project to be made publicly available by default, with exceptions for valid privacy, confidentiality, or security reasons.  Additionally, funders provide different levels of support for open data practices &#40;Oxford University have published a useful <a href="https://researchdata.ox.ac.uk/funder-requirements">guide</a>&#41;.  </p>
+<p> ‘Open data’ describes data sets which are freely available to anyone to use and republish as they wish, without restrictions.  Typically this implies that the data that is available over a computer connection — though you could potentially find legally-unencumbered data in out-of-copyright books and other historical records.  Open Data is one of the key tenets of Open Research, though, as of now, it has not had uniform uptake: <a href="https://www.nature.com/articles/s41597-021-00981-0">depending on the discipline</a>, the rate at which data is available to support publications can range from 9&#37; to 76&#37;.  Furthermore, in comparison with the development of open licences for publications, the development of legal mechanisms for sharing data has been slower, partly because the rights that are attached to research data are typically not a simple ‘copyright’.  Funders also have differing requirements.  Agencies that disperse <strong>public</strong> funds are more likely to require research data produced as part of a funded project to be made publicly available by default, with exceptions for valid privacy, confidentiality, or security reasons.  Additionally, funders provide different levels of support for open data practices &#40;Oxford University have published a useful <a href="https://researchdata.ox.ac.uk/funder-requirements">guide</a>&#41;.</p>
 
 <h3 id="why_open_data"><a href="#why_open_data" class="header-anchor"><strong>Why open data?</strong></a></h3>
 <p>The Royal Society <a href="https://royalsociety.org/journals/authors/early-career-researchers/learn-more-about-publishing-your-manuscript/open-data-requirements/">outlines</a> these rationale for archiving data under terms that allow reuse.</p>
 <ul>
-<li><p>Firstly, it preserves your research contributions &#40;after all: data that isn’t archived in a sensible way can quickly be lost; duplication of the archive is a further strategy to avoid data loss&#41;.  </p>
+<li><p>Firstly, it preserves your research contributions &#40;after all: data that isn’t archived in a sensible way can quickly be lost; duplication of the archive is a further strategy to avoid data loss&#41;.</p>
 </li>
-<li><p>It allows others to build on your work  </p>
+<li><p>It allows others to build on your work</p>
 </li>
-<li><p>It allows interested readers to replicate and/or verify the results of a study  </p>
+<li><p>It allows interested readers to replicate and/or verify the results of a study</p>
 </li>
 <li><p>It can increase citation levels &#40;this point is borne out in a 2020 article <a href="https://journals.plos.org/plosone/article?id&#61;10.1371/journal.pone.0230416">published in PLOS ONE</a>&#41;</p>
 </li>
@@ -102,12 +102,12 @@
 <p>An early conception of “open data” was referred to in the 1970s, with reference to international partners working on satellite operations, who would share information with NASA.  In 1995, a National Academy of Sciences report ”On the Full and Open Exchange of Scientific Data” expanded the purview of the term: alluding to the need for sharing data about various global phenomena that cross national boundaries, including astronomical data, marine data, aviation data, climatological data, satellite data, and various models that work with such data.  Open data may be needed alongside open source software to make computational research sharable and scalable.</p>
 <p>In the mid-’00s, <strong>open government data</strong> increasingly took off, through policy developments such as the “Memorandum on Transparency and Open Government” — signed by President Obama on his first day in office — followed soon thereafter by “Putting the Frontline First: Smarter Government”, in the UK.  Nevertheless, looking internationally, analysis on <a href="http://opendatabarometer.org">opendatabarometer.org</a> shows that only 7&#37; of key government data sets — such as land registries or government budgets — are actually “open”.</p>
 <h3 id="the_future_of_open_data"><a href="#the_future_of_open_data" class="header-anchor"><strong>The Future of Open Data</strong></a></h3>
-<p>In their book on the Future of Open Data, Pamela Robinson and Lisa Ward Mather highlight that <strong>Publishing data often fails to achieve meaningful “awareness” or insight because making sense of data is not easy.</strong>  Universities may be especially well placed to address this gap, thanks in part to the diversity of perspectives that go into university research &#40;see the video on “Research Diversity”&#41;.  Writing <a href="https://www.govtech.com/data/6-ideas-to-help-government-realize-open-datas-transformative-power.html">on Govtech.com</a>, Colin Worth argues that </p>
+<p>In their book on the Future of Open Data, Pamela Robinson and Lisa Ward Mather highlight that <strong>Publishing data often fails to achieve meaningful “awareness” or insight because making sense of data is not easy.</strong>  Universities may be especially well placed to address this gap, thanks in part to the diversity of perspectives that go into university research &#40;see the video on “Research Diversity”&#41;.  Writing <a href="https://www.govtech.com/data/6-ideas-to-help-government-realize-open-datas-transformative-power.html">on Govtech.com</a>, Colin Worth argues that</p>
 <p>“Governments aren’t gaining the benefits of open data today because there’s not been a rigorous effort to integrate the concept of openness into public-sector work.”</p>
 <p>Varied uptake of data sharing across academic disciplines suggests that there may be similar potential for value-gain in the research sector as well.</p>
 
 <h3 id="rather_than_producing_open_data_start_by_using_some"><a href="#rather_than_producing_open_data_start_by_using_some" class="header-anchor"><strong>Rather than producing open data, start by using some</strong></a></h3>
-<p>The simplest suggestion for people new to open data would be to look for existing open data sources that can support your research work.  </p>
+<p>The simplest suggestion for people new to open data would be to look for existing open data sources that can support your research work.</p>
 <h3 id="guidance_on_how_to_prepare_material_for_deposit"><a href="#guidance_on_how_to_prepare_material_for_deposit" class="header-anchor"><strong>Guidance on how to prepare material for deposit</strong></a></h3>
 <p>When aiming to be “as open as possible” researchers may need to give more attention to questions like “How do we ensure anonymisation is effective?” before uploading data publicly. If this applies to you, you may want to check out recent Guidance from the ICO &#40;linked below&#41;.</p>
 <h3 id="what_kind_of_open_data_depending_on_the_expected_use_more_stars_might_be_better"><a href="#what_kind_of_open_data_depending_on_the_expected_use_more_stars_might_be_better" class="header-anchor"><strong>What kind of open data? Depending on the expected use, more ‘stars’ might be better.</strong></a></h3>
@@ -116,15 +116,22 @@
 <h3 id="next_steps"><a href="#next_steps" class="header-anchor"><strong>Next steps</strong></a></h3>
 <div class="note"><div class="title">⚠ Practice Example</div>
 <div class="content">Here at Brookes, Nina Lewin, our Research Data Manager, can help with many aspects of research data, ranging from finding useful secondary data sources to creating data management plans.</div></div>
-<p> <a href="https://ico.org.uk/about-the-ico/ico-and-stakeholder-consultations/ico-call-for-views-anonymisation-pseudonymisation-and-privacy-enhancing-technologies-guidance/">https://ico.org.uk/about-the-ico/ico-and-stakeholder-consultations/ico-call-for-views-anonymisation-pseudonymisation-and-privacy-enhancing-technologies-guidance/</a> </p>
+
+<h2 id="link"><a href="#link" class="header-anchor">Link</a></h2>
+<ul>
+<li><p><a href="https://ico.org.uk/about-the-ico/ico-and-stakeholder-consultations/ico-call-for-views-anonymisation-pseudonymisation-and-privacy-enhancing-technologies-guidance/">ICO call for views: Anonymisation, pseudonymisation and privacy enhancing technologies guidance</a></p>
+</li>
+</ul>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
   </body>
