--- a/__site/Knowledge/Open_Educational_Resources/index.html
+++ b/__site/Knowledge/Open_Educational_Resources/index.html
@@ -104,18 +104,20 @@
 
 <h3 id="co-creating_and_extending_oers_next_steps_for_this_project"><a href="#co-creating_and_extending_oers_next_steps_for_this_project" class="header-anchor"><strong>Co-creating and extending OERs: next steps for this project</strong></a></h3>
 <p>In closing, let’s return again to this video series as an example of an open-research-relevant OER.  The video series has been developed to provide a quick introduction to a variety of open research practices.  Each video has accompanying material that people can look into if they want to take a deeper dive.  Our plan is to share the scripts for these videos with the UKRN’s Training Community of Practice, and collectively revise the content into a textbook.  Several general purpose OERs on Open Research already exist — such as the PaPOR TRAIL and the Global OER Graduate Network OR Handbook &#40;linked below&#41; — the hope is that a community-driven project can build in further specific dimensions of quality around “growing and embedding open research in institutional practice and culture”.  Watch this space: the video description will be updated to include information on how you can get involved in future editions of this material. </p>
-<p> Egan S, Tobin M, Palmer B <em>et al.</em> Developing an open educational resource for open research: Protocol for the PaPOR TRAIL project </p>
-\[version 1; peer review: 2 approved\]
-<p>. <em>HRB Open Res</em> 2020, <strong>3</strong>:84 &#40;<a href="https://doi.org/10.12688/hrbopenres.13171.1">https://doi.org/10.12688/hrbopenres.13171.1</a>&#41; </p>
+
+<h2 id="references"><a href="#references" class="header-anchor">References</a></h2>
+<p>Egan S, Tobin M, Palmer B <em>et al.</em> Developing an open educational resource for open research: Protocol for the PaPOR TRAIL project &#91;version 1; peer review: 2 approved&#93;. <em>HRB Open Res</em> 2020, <strong>3</strong>:84 &#40;<a href="https://doi.org/10.12688/hrbopenres.13171.1">https://doi.org/10.12688/hrbopenres.13171.1</a>&#41; </p>
 <p>Farrow, R. &#40;ed.&#41;, et al. &#40;2023&#41;. <em>The GO-GN Open Research Handbook</em>. Global OER Graduate Network / Open Education Research Hub. <a href="https://go-gn.net/gogn_outputs/open-research-handbook/">https://go-gn.net/gogn&#95;outputs/open-research-handbook/</a></p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
       <script src="/libs/katex/katex.min.js"></script>
 <script src="/libs/katex/contrib/auto-render.min.js"></script>
