--- a/__site/Methods/Participatory_Research/index.html
+++ b/__site/Methods/Participatory_Research/index.html
@@ -113,13 +113,15 @@
 <p>Ten Holter, C. &#40;2022&#41;. Participatory design: lessons and directions for responsible research and innovation. In Journal of Responsible Innovation &#40;Vol. 9, Issue 2, pp. 275–290&#41;. Informa UK Limited. <a href="https://doi.org/10.1080/23299460.2022.2041801">https://doi.org/10.1080/23299460.2022.2041801</a></p>
 <p>Sarah Quinton et al. &#40;2022&#41;. Older People and Participatory Research: Creativity and Digital Technologies as Vehicles for Enhancing Wellbeing. <a href="https://www.brookes.ac.uk/getmedia/06ad3597-b6c7-4be5-9b3f-18d71fa343d1/older-people-and-participatory-research-2022.pdf">https://www.brookes.ac.uk/getmedia/06ad3597-b6c7-4be5-9b3f-18d71fa343d1/older-people-and-participatory-research-2022.pdf</a></p>
 <div class="page-foot">
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 13, 2025.
+  <hr>
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 14, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
   </body>
