--- a/__site/Knowledge/Open_Data/index.html
+++ b/__site/Knowledge/Open_Data/index.html
@@ -70,14 +70,14 @@
       </ul>
     </div>
     <div class="footer">
-      Contact: <a href="mailto:jcorneli@brookes.ac.uk">Joe Corneli</a>
+      Repo: <span style="white-space: nowrap"><a href="https://github.com/orbook/orbook.github.io/">orbook/orbook.github.io</a></span>
     </div>
   </div>
   <!-- CONTENT -->
   <div class="main-content-wrap"> <!-- closed in foot.html -->
     <div class="main-content">    <!-- closed in foot.html -->
       <div class="main-header">
-        <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
+        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png"</a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
       </div>
 
 
@@ -130,7 +130,7 @@
 </ul>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 16, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 17, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
