--- a/__site/About/About/index.html
+++ b/__site/About/About/index.html
@@ -100,9 +100,19 @@
 <p>&#40;among others&#41; it’s worth asking why would put in the effort to create a new book on open research.</p>
 <p>The answer has to do with the comprehensive and thoroughgoing effort to embed open research in institutional practice and culture that the 6-year UKRN <a href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a> represents. Over the course of the ORP, we expect to develop over 180 trainers via a national-level train-the-trainer programme, who will go on to train over 2700 people in UK research institutions.  The <a href="https://www.ukrn.org/training-schema/">Training Schema</a> that we’re following covers a wide range of topics, several of which are simply not covered in the other resources mentioned above.  We also need to develop a resource in which open research topics are covered in a practical and well-integrated way, suited to our working context.</p>
 <p>Starting from approximately 60 pages of material in the original scripts, members of the UKRN <a href="Training Community of Practice">https://www.ukrn.org/ukrn-community-of-practice/</a> have been invited to contribute to the further evolution of this material.  The editorial workflow will develop across Google Docs &#40;by invitation&#41;, Github, and in Hypothesis comments &#40;aggregated <a href="https://hypothes.is/search?q&#61;url&#37;3Aorbook.github.io&#37;2F*">here</a>&#41; on the published pages.  The hope is that the contents will grow to around 250 pages&#33;</p>
+<h2 id="contributing"><a href="#contributing" class="header-anchor">Contributing</a></h2>
+<p>We’ve started by asking for contributions from the UKRN Training Community of Practice, but contributions from others are also welcome. Get in touch via Hypothesis, Github, or email.  When you’ve made contributions to the book, we’ll update the copyright and authorship information below accordingly.</p>
+<h2 id="formal_copyright_and_licensing_statement"><a href="#formal_copyright_and_licensing_statement" class="header-anchor">Formal copyright and licensing statement</a></h2>
+<p><img src="/assets/Creative-Commons-Attribution-ShareAlike-badge.webp" alt="ccbadge" /></p>
+<div class="copyright">Copyright (c) 2024-2025 Oxford Brookes University<br>
+Copyright (c) 2024-2025 University of Bristol<br><br></div>
+<p>To reuse this material in your own work, include a statement such as:</p>
+<blockquote>
+<p>This article re-uses material from the work &quot;Open Research Book&quot; &#40;<a href="https://orbook.github.io">https://orbook.github.io</a>&#41; by Joseph Corneli, Robyn Curtis, Eric White, and David Bullock, which is used here under the terms of the <a href="https://creativecommons.org/licenses/by/4.0/deed.en">Creative Commons Attribution 4.0 Licence</a>.</p>
+</blockquote>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 18, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: February 19, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
