--- a/__site/Communities/Research_Diversity/index.html
+++ b/__site/Communities/Research_Diversity/index.html
@@ -127,7 +127,7 @@
 <p>Anthony J. Olejniczak, Molly J. Wilson. &#40;2020&#41;. Who’s writing open access &#40;OA&#41; articles? Characteristics of OA authors at Ph.D.-granting institutions in the United States. Quantitative Science Studies. 1 &#40;4&#41;: 1429–1450. doi: <a href="https://doi.org/10.1162/qss_a_00091">https://doi.org/10.1162/qss&#95;a&#95;00091</a></p>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 17, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: February 18, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
