--- a/__site/Infrastructure/Repositories_and_Persistent_Research_Identifiers/index.html
+++ b/__site/Infrastructure/Repositories_and_Persistent_Research_Identifiers/index.html
@@ -128,7 +128,7 @@
 <p>Wattanakriengkrai, S., Chinthanet, B., Hata, H., Kula, R. G., Treude, C., Guo, J., &amp; Matsumoto, K. &#40;2022&#41;. GitHub repositories with links to academic papers: Public access, traceability, and evolution. Journal of Systems and Software, 183, 111117.</p>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 17, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: February 18, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
