--- a/__site/Methods/Citizen_Science_and_Crowdsourcing/index.html
+++ b/__site/Methods/Citizen_Science_and_Crowdsourcing/index.html
@@ -123,7 +123,7 @@
 <p>Moss, A. J., Rosenzweig, C., Robinson, J., Jaffe, S. N., &amp; Litman, L. &#40;2021&#41;. Is it Ethical to Use Mechanical Turk for Behavioral Research? Relevant Data from a Representative Survey of MTurk Participants and Wages. Center for Open Science. <a href="https://osf.io/jbc9d_v1">https://osf.io/jbc9d_v1</a></p>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli. Last modified: February 17, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: February 18, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
